Update LAPR3, US02:  -boolean regaAtiva(Map<LocalTime, List<Parcela>> mapaRega);